# sync-my-tasks

./: .gitignore  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
sync-my-tasks/: command.py  provider_asana.py  provider_mstodo.py  tasklist.py
sync_my_tasks/: command.py  provider_asana.py  provider_mstodo.py  task.py  tasklist.py
