[tool.poetry]
name = "sync-my-tasks"
version = "0.1.0"
description = "Copy tasks between apps"
authors = ["wilrnh"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/wilrnh/sync-my-tasks"
repository = "https://github.com/wilrnh/sync-my-tasks"
documentation = "https://github.com/wilrnh/sync-my-tasks"
keywords = ["tasks",
    "asana",
    "microsoft",
    "todo",
    "import",
    "export"
]


[tool.poetry.scripts]
sync-my-tasks = "sync_my_tasks.command:main"

[tool.poetry.dependencies]
python = "^3.9"
asana = "^0.10.3"
docopt = "^0.6.2"
msal = "^1.16.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
